// ═══════════════════════════════════════════════════════════════════════════
// โดเมน 6 — Messaging v2 (Direct + Group Chat)
// คัดลอกทั้งไฟล์ไปวางที่ https://dbdiagram.io/d
//
// ฉบับนี้ = ดีไซน์ conversation_members ที่เสนอมา + ปิดช่องโหว่ที่ DB บังคับไม่ได้
// ═══════════════════════════════════════════════════════════════════════════

Project messaging_v2 {
  database_type: 'PostgreSQL'
  Note: '''
  หลักการ: ทุกกติกาที่ "ผิดแล้วข้อมูลเสีย" ต้องบังคับที่ฐานข้อมูล ไม่ใช่ที่โค้ด

  1) ห้อง direct ซ้ำ           → direct_key UNIQUE (คู่ uuid ที่เรียงแล้ว)
  2) คนนอกส่งข้อความเข้าห้อง    → composite FK ไป conversation_members
  3) reply ข้ามห้อง            → composite FK (reply_to_message_id, conversation_id)
  4) ลบ user ไม่ได้            → ระบุ ON DELETE ครบทุกเส้น
  5) system message ไม่มีผู้ส่ง → sender_id เป็น NULL ได้

  ต้องใช้ PostgreSQL 15 ขึ้นไป เพราะใช้ ON DELETE SET NULL (column)
  CHECK / trigger / index ที่ dbdiagram วาดไม่ได้ อยู่ท้ายไฟล์
  '''
}

Enum conversation_type {
  direct
  group
}

Enum member_role {
  owner
  admin
  member
}

Enum message_type {
  text
  image
  file
  system
}


/* ═════════════════════════ CONVERSATIONS ═════════════════════════ */

Table conversations {
  conversation_id uuid [pk, default: `gen_random_uuid()`]

  type conversation_type [not null, default: 'direct']

  name text [null, note: 'group เท่านั้น — direct ต้องเป็น NULL']

  // แก้ปัญหา #1 — กันห้อง direct ซ้ำระดับฐานข้อมูล
  direct_key text [null, unique, note: 'least(uuid_a,uuid_b) || ":" || greatest(uuid_a,uuid_b) เขียนโดย trigger ตอนสมาชิกครบคู่ — group ต้องเป็น NULL']

  created_by_id uuid [null, note: 'NULL เมื่อผู้สร้างลบบัญชี']

  // แก้ปัญหา #6 — เรียงรายการห้องโดยไม่ต้อง aggregate ตาราง messages
  last_message_at timestamptz [not null, default: `now()`]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    last_message_at [name: 'conversations_recent_idx', note: 'ของจริงเป็น DESC']
  }

  Note: 'ห้องสนทนา 1:1 หรือ Group Chat'
}


Table conversation_members {
  conversation_id uuid [not null]
  user_id uuid [not null]

  role member_role [not null, default: 'member', note: 'ใครเตะคนออก/เปลี่ยนชื่อห้องได้']

  joined_at timestamptz [not null, default: `now()`]

  // ใช้แทน is_active — บอกได้ว่าออกตอนไหน จึงตัดได้ว่าเห็นข้อความถึงจุดไหน
  left_at timestamptz [null, note: 'NULL = ยังอยู่ในห้อง']

  // ใช้ last_read_at อย่างเดียว ไม่เก็บ last_read_message_id
  // เพราะ FK ไป messages ทำให้เกิดวงจร members → messages → conversations
  // และชี้ข้ามห้องได้ — unread นับด้วย created_at > last_read_at พอ
  last_read_at timestamptz [null]

  indexes {
    (conversation_id, user_id) [pk]
    (user_id, left_at) [name: 'members_user_idx', note: 'ดึงห้องทั้งหมดของผู้ใช้']
  }

  Note: '''
  ห้ามลบแถวเมื่อผู้ใช้ออกจากห้อง — ให้ set left_at แทน
  เพราะ messages ผูก composite FK มาที่ตารางนี้ ถ้าลบแถว ข้อความเก่าจะพัง
  '''
}


/* ═════════════════════════ MESSAGES ═════════════════════════ */

Table messages {
  message_id uuid [pk, default: `gen_random_uuid()`]

  conversation_id uuid [not null]

  // แก้ปัญหา #5 — NULL ได้ 2 กรณี: ข้อความระบบ / ผู้ส่งลบบัญชี
  sender_id uuid [null]

  type message_type [not null, default: 'text']

  content text [null, note: 'type=text ต้องมีค่า 1–2000 ตัวอักษร — ดู CHECK ท้ายไฟล์']

  reply_to_message_id uuid [null]

  is_edited boolean [not null, default: false]
  edited_at timestamptz [null]

  deleted_at timestamptz [null, note: 'soft delete — ไม่ส่งเนื้อหาออก API']

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (message_id, conversation_id) [unique, name: 'messages_scoped_key', note: 'รองรับ composite FK ของ reply']
    (conversation_id, created_at, message_id) [name: 'messages_thread_idx', note: 'ของจริง DESC ทั้งคู่ — keyset pagination ต้องมี id กัน created_at ชนกัน']
    reply_to_message_id [name: 'messages_reply_idx']
  }

  Note: 'ข้อความภายใน conversation'
}


Table message_attachments {
  attachment_id uuid [pk, default: `gen_random_uuid()`]

  message_id uuid [not null]

  // ชี้ไปตาราง assets ไม่เก็บ file_url / mime_type / file_size ซ้ำ
  // เพราะ assets มีเจ้าของไฟล์อยู่แล้ว (เก็บกวาดไฟล์กำพร้าได้)
  // และ signed URL ที่เก็บดิบไว้จะหมดอายุ
  asset_id uuid [not null]

  sort_order int [not null, default: 0, note: 'เรียงรูปหลายรูปให้คงที่']

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (message_id, sort_order) [unique]
  }

  Note: 'ไฟล์/รูปแนบของข้อความ'
}


/* ═════════════════════════ SAFETY ═════════════════════════ */

Table user_blocks {
  blocker_id uuid [not null]
  blocked_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (blocker_id, blocked_id) [pk]
    blocked_id
  }

  Note: 'บล็อกผู้ใช้ — ตรวจก่อนเปิดห้อง direct และก่อนส่งข้อความ'
}


/* ═════════════════════ ตารางอ้างอิงข้ามโดเมน ═════════════════════ */

Enum user_role {
  user
  shop
  admin
}

Table users {
  user_id uuid [pk]
  email text [unique, not null]
  role user_role [not null]
  display_name text [not null]

  Note: '[อ้างอิง] โดเมน 1 — Identity'
}

Table assets {
  asset_id uuid [pk]
  owner_id uuid [not null]
  storage_key text [unique, not null]
  mime_type text [not null]
  size_bytes bigint [not null]

  Note: '[อ้างอิง] โดเมน 2 — Design Workspace'
}

Enum content_report_target {
  template
  comment
  message
}

Table content_reports {
  report_id uuid [pk]
  target_type content_report_target [not null]
  target_id uuid [not null]
  reporter_id uuid [not null]

  Note: '[อ้างอิง] โดเมน 4 — รายงานข้อความใช้ target_type = message'
}


/* ═════════════════════════ RELATIONSHIPS ═════════════════════════ */

Ref: conversations.created_by_id > users.user_id [delete: set null]

Ref: conversation_members.conversation_id > conversations.conversation_id [delete: cascade]
Ref: conversation_members.user_id > users.user_id [delete: cascade]

Ref: messages.conversation_id > conversations.conversation_id [delete: cascade]

// แก้ปัญหา #2 — ผู้ส่งต้องเป็นสมาชิกของห้องนั้นจริง
// MATCH SIMPLE: เมื่อ sender_id เป็น NULL (ข้อความระบบ) FK จะไม่ถูกตรวจ
// SQL จริงต้องเป็น ON DELETE SET NULL (sender_id) — PG15+
Ref: messages.(conversation_id, sender_id) > conversation_members.(conversation_id, user_id) [delete: set null]

// แก้ปัญหา #3 — reply ได้เฉพาะข้อความในห้องเดียวกัน
Ref: messages.(reply_to_message_id, conversation_id) > messages.(message_id, conversation_id) [delete: set null]

Ref: message_attachments.message_id > messages.message_id [delete: cascade]
Ref: message_attachments.asset_id > assets.asset_id [delete: cascade]

Ref: user_blocks.blocker_id > users.user_id [delete: cascade]
Ref: user_blocks.blocked_id > users.user_id [delete: cascade]

Ref: content_reports.reporter_id > users.user_id [delete: cascade]


/* ═══════════════════════════════════════════════════════════════════════════
   ส่วนที่ dbdiagram วาดไม่ได้ — ต้องเขียนใน migration เอง

   -- conversations ------------------------------------------------------
   ALTER TABLE conversations
     ADD CONSTRAINT conversations_direct_key_check
       CHECK ((type = 'direct') = (direct_key IS NOT NULL)),
     ADD CONSTRAINT conversations_group_name_check
       CHECK ((type = 'group') = (name IS NOT NULL));

   -- messages -----------------------------------------------------------
   ALTER TABLE messages
     ADD CONSTRAINT messages_text_content_check
       CHECK (type <> 'text' OR char_length(content) BETWEEN 1 AND 2000),
     ADD CONSTRAINT messages_system_sender_check
       CHECK (type <> 'system' OR sender_id IS NULL),
     ADD CONSTRAINT messages_edited_check
       CHECK (is_edited = (edited_at IS NOT NULL)),
     ADD CONSTRAINT messages_no_self_reply_check
       CHECK (reply_to_message_id IS DISTINCT FROM message_id);

   -- index ที่ต้องระบุทิศทาง ---------------------------------------------
   CREATE INDEX conversations_recent_idx
     ON conversations (last_message_at DESC);
   CREATE INDEX messages_thread_idx
     ON messages (conversation_id, created_at DESC, message_id DESC);

   -- FK แบบเจาะคอลัมน์ (PostgreSQL 15+) ----------------------------------
   ALTER TABLE messages
     ADD CONSTRAINT messages_sender_is_member_fkey
       FOREIGN KEY (conversation_id, sender_id)
       REFERENCES conversation_members (conversation_id, user_id)
       ON DELETE SET NULL (sender_id),
     ADD CONSTRAINT messages_reply_same_room_fkey
       FOREIGN KEY (reply_to_message_id, conversation_id)
       REFERENCES messages (message_id, conversation_id)
       ON DELETE SET NULL (reply_to_message_id);

   -- trigger 1: เขียน direct_key + กันห้อง direct เกิน 2 คน ---------------
   -- ยิงหลัง INSERT บน conversation_members เมื่อห้องเป็น direct
   --   ถ้านับสมาชิกได้ > 2  → RAISE EXCEPTION
   --   ถ้านับได้ = 2        → UPDATE conversations SET direct_key =
   --                          least(a,b)::text || ':' || greatest(a,b)::text
   -- UNIQUE บน direct_key คือตัวกันห้องซ้ำจริง ๆ (ชนแล้ว INSERT ล้มทันที)

   -- trigger 2: UPDATE conversations.last_message_at เมื่อ INSERT messages
   ═══════════════════════════════════════════════════════════════════════ */
